fix buttons cut off when pressed

--- a/src/components/Lists/Search/SearchBar.scss
+++ b/src/components/Lists/Search/SearchBar.scss
@@ -60,6 +60,7 @@ form.search-form {
 
 .search-button {
   @include button-styles;
+  @include all-buttons;
   height: 120px;
   width: 130px;
   font-size: 25px;
